--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "mongodb": "^4.13.0"
+    "mongodb": "^4.13.0",
+    "validator": "^13.7.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.15",
     "@types/node": "^18.11.18",
+    "@types/validator": "^13.7.11",
     "tsx": "^3.12.2",
     "typescript": "^4.9.4"
   }
